--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,31 @@
     </header>
     <main>
         <section id="hero"
-            class="relative w-full h-screen bg-[url(https://media.staticontent.com/media/pictures/81958045-e763-44a1-a9ac-de85b9819b5e)] bg-black/50 bg-blend-multiply bg-center bg-cover bg-no-repeat">
+            class="relative w-full h-screen bg-[url(https://media.staticontent.com/media/pictures/81958045-e763-44a1-a9ac-de85b9819b5e)] bg-black/50 bg-blend-multiply bg-center bg-cover bg-no-repeat flex items-center">
+        
             <!--Hero Content-->
-            <div class="container"></div>
+            <div class="container max-w-[1200px] text-white p-8">
+                <h1 class="text-5xl font-light leading-tight tracking-wider mb-6">
+                    Experience Alps <br>
+                    from a new perspective
+                </h1>
+                <div class="flex items-center gap-4 mb-8">
+                    <ion-icon class="text-2xl" name="ellipsis-horizontal-outline"></ion-icon>
+                    <span class="text-sm uppercase text-gray-300 cursor-pointer">read more</span>
+                </div>
+
+                <a href="#" class="inline-block mt-6 py-3 px-6 bg-green-500 rounded-full text-sm font-bold uppercase tracking-widest hover:scale-110 active:scale-95 transition duration-150">get started</a>
+            </div>
+
+            <!--Social Links-->
+            <div class="absolute right-4 bottom-1/2 translate-y-1/2">
+                <div class="text-white p-4 flex flex-col gap-8 items-center text-2xl">
+                    <ion-icon class="cursor-pointer hover:scale-150" name="logo-facebook"></ion-icon>
+                    <ion-icon class="cursor-pointer hover:scale-150" name="logo-instagram"></ion-icon>
+                    <ion-icon class="cursor-pointer hover:scale-150" name="logo-linkedin"></ion-icon>
+                </div>
+            </div>
+
         </section>
     </main>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
