Aplicando responsividad en la Página.

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
 
             <!--Links-->
             <div class="relative flex gap-6 items-center">
-                <a href="#" class="text-white uppercase hover:text-orange-400">Home</a>
+                <a href="#" class="text-white uppercase hover:text-orange-400">Inicio</a>
 
-                <a href="#" class="text-white uppercase hover:text-orange-400">Home</a>
+                <a href="#" class="text-white uppercase hover:text-orange-400">Colaboradores</a>
 
-                <a href="#" class="text-white uppercase hover:text-orange-400">Stories</a>
+                <a href="#" class="text-white uppercase hover:text-orange-400">Horario</a>
 
-                <a href="#" class="text-white uppercase hover:text-orange-400">Contac</a>
+                <a href="#" class="text-white uppercase hover:text-orange-400">Contacto</a>
 
                 <!--Searcgh Btn-->
                 <div id="search-btn" class="flex justify-center items-ce">
@@ -48,27 +48,30 @@
     </header>
     <main>
         <section id="hero"
-            class="relative w-full h-screen bg-[url(https://media.staticontent.com/media/pictures/81958045-e763-44a1-a9ac-de85b9819b5e)] bg-black/40 bg-blend-multiply bg-center bg-cover bg-no-repeat flex items-center">
+            class="relative w-full h-screen bg-[url(https://images.pexels.com/photos/1105379/pexels-photo-1105379.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1)] bg-black/40 bg-blend-multiply bg-center bg-cover bg-no-repeat flex items-center">
 
             <!--Hero Content-->
-            <div class="container max-w-[1200px] text-white p-8">
-                <h1 class="text-5xl font-light leading-tight tracking-wider mb-6">
-                    Experience Alps <br>
-                    from a new perspective
+            <div class="container mx-auto max-w-[1600px] text-white p-4 md:p-8 xl:p-0 items-center text-center md:text-left">
+
+                <h1 class="text-3xl md:text-[50px]  font-semibold
+                leading-tight tracking-wider mb-6">
+                    <center> DEPARTAMENTO DE SISTEMAS  <br>
+                    HXA</center>
                 </h1>
-                <div class="flex items-center gap-4 mb-8">
+
+                <div class="hidden md:flex items-center gap-4 mb-8">
                     <ion-icon class="text-2xl" name="ellipsis-horizontal-outline"></ion-icon>
                     <span class="text-sm uppercase text-gray-300 cursor-pointer">read more</span>
                 </div>
 
-                <a href="#"
-                    class="inline-block mt-6 py-3 px-6 bg-green-500 rounded-full text-sm font-bold uppercase tracking-widest hover:scale-110 active:scale-95 transition duration-150">get
-                    started</a>
+                <center><a href="#"
+                    class="inline-block mt-6 py-3 px-6 bg-green-500 rounded-full text-sm font-bold uppercase tracking-widest hover:scale-110 active:scale-95 transition duration-150">Iniciar Sesión</a>
+                </center>
             </div>
 
             <!--Social Links-->
-            <div class="absolute right-4 bottom-1/2 translate-y-1/2">
-                <div class="text-white p-4 flex flex-col gap-8 items-center text-2xl">
+            <div class="absolute bottom-4 right-1/2 translate-x-1/2 md:right-4 md:bottom-1/2 md:translate-x-0 translate-y-1/2">
+                <div class="text-white p-4 flex md:flex-col gap-8 items-center text-2xl">
                     <ion-icon class="cursor-pointer hover:scale-150" name="logo-facebook"></ion-icon>
                     <ion-icon class="cursor-pointer hover:scale-150" name="logo-instagram"></ion-icon>
                     <ion-icon class="cursor-pointer hover:scale-150" name="logo-linkedin"></ion-icon>
@@ -84,12 +87,12 @@
                 </div>
 
                 <!--Images-->
-                <div class="w-full h-full bg-gray-200 grid-cols-3 gap-4">
-                <!--Img1-->
+                <!-- <div class="w-full h-full bg-gray-200 grid-cols-3 gap-4">
+                <!--Img1
                 <div class="flex items-center gap-4">
                     <img src="https://img.freepik.com/psd-gratis/icono-3d-aplicacion-redes-sociales_23-2150049569.jpg" alt="" class="w-[100px] h-[100px] object-cover">
                 </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
