--- a/public/index.html
+++ b/public/index.html
@@ -75,15 +75,20 @@
   </section>
 
 
- <center>
-  <div class="mt-40">
-    <a href="#"
-      class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-xl bg-white border border-transparent text-black hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none">
-      Read Case Studies
-    </a>
-  </div>
-</center>
-  <div class="min-w-80 p-3 z-20 mt-5">
+    <!-- Testimonials -->
+    <div class="bg-neutral-400 mt-10 border-spacing-9 rounded-2xl  ">
+      <div class=" lg:py-24">
+        <blockquote class="max-w-8 mx-auto">
+          <p class="md:text-lg">
+            <span class="font-semibold text-lime-400">HORARIO SEMANAL</span> 
+          </p>
+
+        </blockquote>
+      </div>
+    </div>
+    <!-- End Testimonials -->
+
+  <div class="min-w-80 p-12 z-20 mt-5">
     <div class="hs-carousel-slide">
       <div class="h-80 md:h-[calc(100vh-106px)] flex flex-col bg-cover bg-center bg-no-repeat rounded-lg"
         style="background-image: url('https://images.pexels.com/photos/4195499/pexels-photo-4195499.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
